[gd_scene load_steps=33 format=2]

[ext_resource path="res://Scenes/main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/inspect_area_pivot.gd" type="Script" id=2]
[ext_resource path="res://Textures/icon_fish.png" type="Texture" id=3]
[ext_resource path="res://Textures/icon_health.png" type="Texture" id=4]
[ext_resource path="res://Textures/icon_sanity.png" type="Texture" id=5]
[ext_resource path="res://Scenes/resource_pivot.gd" type="Script" id=6]
[ext_resource path="res://Scenes/hand_cards_pivot.gd" type="Script" id=7]
[ext_resource path="res://Textures/wood_icon.png" type="Texture" id=8]
[ext_resource path="res://Textures/card_back.png" type="Texture" id=9]
[ext_resource path="res://Scenes/void_area.gd" type="Script" id=10]
[ext_resource path="res://Theme/seaman_theme.tres" type="Theme" id=11]
[ext_resource path="res://Scenes/bell.gd" type="Script" id=12]
[ext_resource path="res://Textures/bell_body.png" type="Texture" id=13]
[ext_resource path="res://Textures/bell_ball.png" type="Texture" id=14]
[ext_resource path="res://Scenes/bell_button.gd" type="Script" id=15]
[ext_resource path="res://Scenes/day_num_pivot.gd" type="Script" id=16]
[ext_resource path="res://Scenes/brown_paper.gd" type="Script" id=17]
[ext_resource path="res://Scenes/extra_card_panel.gd" type="Script" id=18]
[ext_resource path="res://Textures/evil_eye_bg.png" type="Texture" id=19]
[ext_resource path="res://Scenes/evil_eye.gd" type="Script" id=20]
[ext_resource path="res://Textures/evil_eyeball.png" type="Texture" id=21]
[ext_resource path="res://Textures/evil_pupil.png" type="Texture" id=22]

[sub_resource type="StreamTexture" id=4]
load_path = "res://.import/brown_paper.png-c52f97672a25cfe2695aaa0dbf0774d0.stex"

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="PhysicsMaterial" id=3]
friction = 0.0
bounce = 0.33

[sub_resource type="CircleShape2D" id=1]
radius = 9.0

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 19 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 19 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 19 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 19 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 19 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 8 ), SubResource( 7 ), SubResource( 6 ) ],
"loop": true,
"name": "eye",
"speed": 24.0
} ]

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="void_area" type="TextureButton" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 10 )

[node name="table_pivot" type="Node2D" parent="."]
position = Vector2( 203, 18 )

[node name="grid_pivot" type="Node2D" parent="table_pivot"]

[node name="scene_card_pivot" type="Node2D" parent="table_pivot"]

[node name="chara_card_pivot" type="Node2D" parent="table_pivot"]
position = Vector2( -8, -16 )

[node name="HUD" type="Node2D" parent="."]
z_index = 1

[node name="brown_paper" type="Sprite" parent="HUD"]
position = Vector2( 1215, 285 )
scale = Vector2( 1.5, 1.5 )
texture = SubResource( 4 )
script = ExtResource( 17 )

[node name="card_info" type="Label" parent="HUD/brown_paper"]
margin_left = -95.0
margin_top = -117.0
margin_right = 53.0
margin_bottom = 50.0
rect_scale = Vector2( 1.33, 1.33 )
theme = ExtResource( 11 )
custom_colors/font_color = Color( 0.380392, 0.192157, 0.101961, 1 )
text = "卡片名称
卡片效果
卡片描述效果是什么有什么效果"
align = 1
valign = 1
autowrap = true

[node name="bell" type="Node2D" parent="HUD"]
position = Vector2( 980, 573 )
script = ExtResource( 12 )

[node name="root_rb2d" type="StaticBody2D" parent="HUD/bell"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HUD/bell/root_rb2d"]
position = Vector2( 0, -85 )
shape = SubResource( 2 )
disabled = true

[node name="ball_rb2d" type="RigidBody2D" parent="HUD/bell"]
mass = 0.1
physics_material_override = SubResource( 3 )
gravity_scale = 4.0
contacts_reported = 1
contact_monitor = true

[node name="ball" type="Sprite" parent="HUD/bell/ball_rb2d"]
position = Vector2( 0, -30 )
texture = ExtResource( 14 )
offset = Vector2( 0, 36 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HUD/bell/ball_rb2d"]
position = Vector2( 0, 6 )
shape = SubResource( 1 )

[node name="body_rb2d" type="RigidBody2D" parent="HUD/bell"]
position = Vector2( 0, -16 )
gravity_scale = 24.0
angular_damp = 28.0

[node name="bell_button" type="TextureButton" parent="HUD/bell/body_rb2d"]
margin_left = -28.0
margin_top = -83.0
margin_right = 26.0
margin_bottom = 23.0
script = ExtResource( 15 )

[node name="body" type="Sprite" parent="HUD/bell/body_rb2d"]
position = Vector2( -1.09998, -69 )
texture = ExtResource( 13 )
offset = Vector2( 0, 36 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HUD/bell/body_rb2d"]
position = Vector2( -0.0999756, 16 )
polygon = PoolVector2Array( -39.9, 20, -75.9, -7, 1.09998, -95, 77.1, -5, 39.1, 22, 0, -32 )

[node name="PinJoint2D" type="PinJoint2D" parent="HUD/bell"]
position = Vector2( -1, -41 )
node_a = NodePath("../ball_rb2d")
node_b = NodePath("../body_rb2d")
disable_collision = false
softness = 2.06

[node name="PinJoint2D2" type="PinJoint2D" parent="HUD/bell"]
position = Vector2( 0, -61 )
node_a = NodePath("../root_rb2d")
node_b = NodePath("../body_rb2d")

[node name="draw_pile_pivot" type="Node2D" parent="HUD"]
position = Vector2( 40, 560 )

[node name="eliminate_area_pivot" type="Node2D" parent="HUD"]
position = Vector2( 108, 560 )

[node name="draw_pile_sprite" type="Sprite" parent="HUD"]
position = Vector2( 40, 560 )
texture = ExtResource( 9 )

[node name="evil_eye" type="Node2D" parent="HUD"]
position = Vector2( 108, 560 )
script = ExtResource( 20 )

[node name="eyeball" type="Sprite" parent="HUD/evil_eye"]
texture = ExtResource( 21 )

[node name="pupil" type="Sprite" parent="HUD/evil_eye"]
texture = ExtResource( 22 )

[node name="card_bg" type="AnimatedSprite" parent="HUD/evil_eye"]
frames = SubResource( 10 )
animation = "eye"

[node name="discard_pile_pivot" type="Node2D" parent="HUD"]
position = Vector2( 40, 492 )

[node name="hand_cards_pivot" type="Node2D" parent="HUD"]
position = Vector2( 512, 550 )
script = ExtResource( 7 )

[node name="inspect_area_pivot" type="Node2D" parent="HUD"]
position = Vector2( 512, 280 )
script = ExtResource( 2 )

[node name="extra_card_panel" type="Node2D" parent="HUD"]
script = ExtResource( 18 )

[node name="blackout" type="Polygon2D" parent="HUD/extra_card_panel"]
visible = false
color = Color( 0, 0, 0, 0.501961 )
polygon = PoolVector2Array( 0, 0, 1024, 0, 1024, 600, 0, 600 )

[node name="extra_cards_pivot" type="Node2D" parent="HUD/extra_card_panel"]

[node name="resource_pivot" type="Node2D" parent="HUD"]
script = ExtResource( 6 )

[node name="fish_pivot" type="Node2D" parent="HUD/resource_pivot"]
position = Vector2( 16, 16 )

[node name="fish_num" type="RichTextLabel" parent="HUD/resource_pivot/fish_pivot"]
margin_left = 20.0
margin_right = 148.0
margin_bottom = 22.0
theme = ExtResource( 11 )
text = "fish num"
fit_content_height = true
scroll_active = false

[node name="icon_fish" type="Sprite" parent="HUD/resource_pivot/fish_pivot"]
position = Vector2( 8, 8 )
texture = ExtResource( 3 )

[node name="wood_pivot" type="Node2D" parent="HUD/resource_pivot"]
position = Vector2( 16, 36 )

[node name="wood_num" type="RichTextLabel" parent="HUD/resource_pivot/wood_pivot"]
margin_left = 20.0
margin_right = 148.0
margin_bottom = 22.0
theme = ExtResource( 11 )
text = "wood num"
fit_content_height = true
scroll_active = false

[node name="icon_wood" type="Sprite" parent="HUD/resource_pivot/wood_pivot"]
position = Vector2( 8, 8 )
texture = ExtResource( 8 )

[node name="sanity_pivot" type="Node2D" parent="HUD/resource_pivot"]
position = Vector2( 16, 56 )

[node name="sanity_num" type="RichTextLabel" parent="HUD/resource_pivot/sanity_pivot"]
margin_left = 20.0
margin_right = 148.0
margin_bottom = 22.0
theme = ExtResource( 11 )
text = "sanity num"
fit_content_height = true
scroll_active = false

[node name="icon_sanity" type="Sprite" parent="HUD/resource_pivot/sanity_pivot"]
position = Vector2( 8, 8 )
texture = ExtResource( 5 )

[node name="health_pivot" type="Node2D" parent="HUD/resource_pivot"]
position = Vector2( 16, 76 )

[node name="health_num" type="RichTextLabel" parent="HUD/resource_pivot/health_pivot"]
margin_left = 20.0
margin_right = 148.0
margin_bottom = 22.0
theme = ExtResource( 11 )
text = "health num"
fit_content_height = true
scroll_active = false

[node name="icon_health" type="Sprite" parent="HUD/resource_pivot/health_pivot"]
position = Vector2( 8, 8 )
texture = ExtResource( 4 )

[node name="prompt" type="Label" parent="HUD"]
margin_left = 250.0
margin_top = 440.0
margin_right = 512.0
margin_bottom = 454.0
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 11 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 0.25098 )
align = 1
valign = 1

[node name="day_num_pivot" type="Label" parent="HUD"]
margin_left = 890.0
margin_top = 547.0
margin_right = 958.0
margin_bottom = 578.0
theme = ExtResource( 11 )
text = "第n轮
第n天"
align = 1
script = ExtResource( 16 )

[node name="menu" type="Node2D" parent="."]
position = Vector2( 988, 36 )

[connection signal="body_entered" from="HUD/bell/ball_rb2d" to="HUD/bell" method="_on_ball_rb2d_body_entered"]
[connection signal="animation_finished" from="HUD/evil_eye/card_bg" to="HUD/evil_eye" method="_on_card_bg_animation_finished"]
